# orb

./: .gitignore  .travis.yml  README.md  orb.cabal  stack.yaml
.travis/: install-sdl2.sh
app/: Main.hs
assets/: test.html
src/: DOM.hs  Layout.hs  Node.hs  Paint.hs  Style.hs  Types.hs
src/Layout/: Box.hs  Height.hs  Types.hs  Width.hs
src/Paint/: DisplayCommand.hs  Rect.hs  Text.hs
src/Style/: Color.hs  Lookup.hs  Parser.hs  Types.hs
test/Style/: ParserSpec.hs
