name:                orb
version:             0.1.0.0
synopsis:            A toy web browser
description:         Please see README.md
homepage:            http://github.com/forestbelton/orb
license:             BSD3
license-file:        LICENSE
author:              Forest Belton
maintainer:          forest@homolo.gy
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DOM
                     , Node
                     , Paint
                     , Style
                     , Layout
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.5.1 && < 0.6
                     , tagsoup >= 0.13.3 && < 0.14
                     , css-text >= 0.1.2.1 && < 0.2
                     , sdl2 >= 1.3.1 && < 1.4
                     , sdl2-ttf >= 0.2.1 && < 0.2.2
                     , text >= 1.2.0.6 && < 1.3
                     , attoparsec >= 0.12.1.6 && < 0.14
  default-language:    Haskell2010

executable orb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orb
                     , sdl2 >= 1.3.1 && < 1.4
                     , sdl2-ttf >= 0.2.1 && < 0.2.2
                     , containers >= 0.5.5.1 && < 0.6
                     , attoparsec >= 0.12.1.6 && < 0.14
  default-language:    Haskell2010

test-suite orb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , orb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/forestbelton/orb

